--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,24 @@ env:
     - WP_TRAVISCI=travis:phpunit
 matrix:
   include:
-  - php: 7
-    env: WP_TRAVISCI=travis:js
-  - php: 5.2
-  - php: 5.3
-  - php: 5.4
-  - php: 5.5
-  - php: 5.6
-  - php: 5.6
-    env: WP_TRAVIS_OBJECT_CACHE=true
-    services: memcached
-  - php: hhvm
+    - php: 5.5
+      env: WP_TRAVISCI=travis:js
+    - php: 5.2
+      env: WP_TRAVISCI=travis:phpunit
+    - php: 5.3
+      env: WP_TRAVISCI=travis:phpunit
+    - php: 5.4
+      env: WP_TRAVISCI=travis:phpunit
+    - php: 5.5
+      env: WP_TRAVISCI=travis:phpunit
+    - php: 5.6
+      env: WP_TRAVISCI=travis:phpunit
+    - php: hhvm
+      env: WP_TRAVISCI=travis:phpunit
+  allow_failures:
+    - php: 5.6
+    - php: hhvm
+  fast_finish: true
     sudo: required
     dist: trusty
     group: edge
